--- a/index.html
+++ b/index.html
@@ -1,2 +1,2 @@
-<script src="./note-model.js"></script>
-<script src="./note-test.js"></script>
+<script src="./notes-model.js"></script>
+<script src="./notes-test.js"></script>
