NotesList model added, all tests are passing

--- a/index.html
+++ b/index.html
@@ -1,2 +1,4 @@
 <script src="./notes-model.js"></script>
+<script src="./note-list-model.js"></script>
 <script src="./notes-test.js"></script>
+<script src="./condition.js"></script>
